fixed some layout issues

--- a/public/styles/css/main.css
+++ b/public/styles/css/main.css
@@ -8,20 +8,25 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
+  overflow: auto;
 }
 
-.main {
+html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.main {
   max-width: 1200px;
 }
 
 .nav {
+  background: black;
+  color: white;
   padding: 0 10px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -36,7 +41,6 @@ html, body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: rgba(0, 0, 0, 0.3);
 }
 
 .nav__header {
@@ -60,25 +64,34 @@ html, body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  overflow: auto;
 }
 
 .catalog__list {
-  padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  overflow: auto;
+  overflow-y: hidden;
+  padding: 30px 0;
 }
 
 .catalog__list li {
   list-style: none;
-  padding: 0 10px;
+  margin: 0 10px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border: 3px solid transparent;
+}
+
+.catalog__list li:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .video {
-  -webkit-box-flex: 5;
-      -ms-flex: 5;
-          flex: 5;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -102,19 +115,20 @@ html, body {
 }
 
 .video__player {
-  -webkit-box-flex: 2;
-      -ms-flex: 2;
-          flex: 2;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   background: black;
+  max-height: -webkit-fill-available;
 }
 
 .video__legend {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-flex: 2;
-      -ms-flex: 2;
-          flex: 2;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   padding: 10px;
 }
 
